# Panopticon

./: CMakeLists.txt  README
settings/: censor.lst
src/: greatfd.cpp  main.cpp  pygfd.py  smallfd.cpp
